--- a/src/list.hbs
+++ b/src/list.hbs
@@ -1,5 +1,5 @@
 <ul class="people_list">
     {{#each response}}
-    <li>{{this.nativeName}}</li>
+    <li class="list">{{this.nativeName}}</li>
     {{/each}}
 </ul>
